# cmake_example

./: .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  Makefile  README.md
bina/: CMakeLists.txt  Makefile
bina/src/: main.cpp
bina/src/bina/: main.cpp
common/cmake/: ccache.cmake  common.cmake  config.cmake  cpputest.cmake  distcc.cmake  macro.cmake  user.cmake
common/make/: Makefile.common  Makefile.forward
design/: CMakeLists.txt  design.plant
liba/: CMakeLists.txt
liba/include/: prints.h
liba/include/liba/: prints.h
liba/libaa/: CMakeLists.txt
liba/libaa/src/: libaa.cpp
liba/libaa/src/libaa/: libaa.cpp
liba/src/: prints.cpp
liba/src/liba/: defs.h.in  prints.cpp
liba/src/liba/os/: print_linux.cpp  print_mac.cpp  print_win.cpp
liba/src/os/: print_linux.cpp  print_mac.cpp  print_win.cpp
liba/test/: CMakeLists.txt  Makefile
liba/test/src/: test_printHello2.cpp
liba/ut/: CMakeLists.txt  Makefile
liba/ut/src/liba/: test_printHello.cpp  test_printHello2.cpp
libaa/: CMakeLists.txt
libaa/include/: libaa.h
moda/: CMakeLists.txt  Makefile
testa/: CMakeLists.txt
testa/src/: test_printHello.cpp
